# NeuralWalker

./: .gitignore  LICENSE  README.md  environment.yaml  environment_latest.yaml  pyproject.toml  train.py
config/: results.yaml  train.yaml
config/dataset/: cifar10.yaml  cluster.yaml  coco.yaml  mnist.yaml  ogbg_code2.yaml  ogbg_molpcba.yaml  ogbg_ppa.yaml  pascalvoc.yaml  pattern.yaml  pcqm_contact.yaml  peptides_func.yaml  peptides_struct.yaml  zinc.yaml
config/experiment/: cluster.yaml  coco.yaml  mnist.yaml  ogbg_code2.yaml  ogbg_molpcba.yaml  ogbg_ppa.yaml  pascalvoc.yaml  pattern.yaml  pcqm_contact.yaml  peptides_func.yaml  peptides_struct.yaml  zinc.yaml
config/experiment/model/: conv+vn_3L.yaml  mamba+transformer_5L.yaml  mamba+vn_3L.yaml  mamba+vn_6L.yaml  mamba+vn_cluster.yaml  mamba_3L.yaml  mamba_6L.yaml  ogbg_code2.yaml  ogbg_molpcba.yaml  ogbg_ppa.yaml  (+2 more)
config/mode/: debug.yaml
neuralwalker/: loss.py  lr_schedulers.py  utils.py
neuralwalker/data/: __init__.py  ogbg_code2_utils.py  transforms.py  walks.pyx  wrapper.py
neuralwalker/models/: __init__.py  neuralwalker.py  pl_models.py
neuralwalker/modules/: feature_encoder.py  gnn_layers.py  head.py  mp_layer.py  neuralwalker_layer.py  pos_embed.py  rotary_embedding.py  s4.py  transformer.py  virtual_node_layer.py
node_classification/: README.md  dataset.py  eval.py  logger.py  main.py  model.py  neuralwalker.py  parse.py  run.sh  utils.py  walk_encoder.py
node_classification/large_graph_exp/: lg_model.py  lg_parse.py  main-batch.py  neuralwalker.py  run_large.sh
scripts/: get_results.py
